<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ssh_main_title">ssh 客户端</string>
    <string name="ssh_main_group">默认组</string>
    <string name="ssh_main_list_empty">您还未连接过任何远程ssh客户端</string>
    <string name="ssh_main_add_now">立即添加</string>

    <!-- 添加ssh -->
    <string name="ssh_add_title">添加远程 SSH</string>
    <string name="ssh_add_host">主机信息</string>
    <string name="ssh_add_credentials">连接验证</string>
    <string name="ssh_add_edit_title">编辑远程 SSH</string>
    <string name="ssh_add_label">SSH 标签</string>
    <string name="ssh_add_label_empty">标签不能为空</string>
    <string name="ssh_add_label_hint">设置标签便于识别</string>
    <string name="ssh_add_label_required">请输入一个标签</string>
    <string name="ssh_add_group">SSH 分组</string>
    <string name="ssh_add_group_default">默认分组</string>
    <string name="ssh_add_group_empty">分组名称不能为空</string>
    <string name="ssh_add_group_hint">保存至分组以方便管理</string>
    <string name="ssh_add_ip">SSH IP地址或域名</string>
    <string name="ssh_add_ip_empty">IP或域名不能为空</string>
    <string name="ssh_add_ip_hint">例：192.168.0.1</string>
    <string name="ssh_add_ip_required">请输入远程地址或域名</string>
    <string name="ssh_add_port">SSH 端口</string>
    <string name="ssh_add_port_empty">端口不能为空</string>
    <string name="ssh_add_port_default">22</string>
    <string name="ssh_add_port_hint">请输入远程SSH端口，默认22</string>
    <string name="ssh_add_account">SSH 用户名</string>
    <string name="ssh_add_account_empty">用户名不能为空</string>
    <string name="ssh_add_account_hint">例：Administrator</string>
    <string name="ssh_add_account_required">请输入远程用户名</string>
    <string name="ssh_add_password">SSH 密码</string>
    <string name="ssh_add_password_hint">SSH 密码</string>
    <string name="ssh_add_success">远程 SSH 保存成功</string>

    <!-- 连接ssh -->
    <string name="ssh_terminal_error">连接信息错误</string>
</resources>